...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="login" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XnK-du-ic3">
                                <rect key="frame" x="159" y="230" width="193" height="34"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WJJ-wK-0xH">
                                <rect key="frame" x="159" y="294" width="193" height="34"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Log in"/>
                                <connections>
                                    <action selector="LogIn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FIP-By-BHR"/>
...
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Register"/>
                                <connections>
                                    <action selector="registerPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ISF-4H-cRI"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hospitals" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rKu-Sd-1N5">
                                <rect key="frame" x="171" y="70" width="107" height="29"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                <state key="normal" title="Back"/>
                                <connections>
                                    <action selector="backTapped:" destination="vSg-no-bqR" eventType="touchUpInside" id="Bqe-Hx-MgM"/>
...
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Polyclinics"/>
                                <connections>
                                    <action selector="polyclinicsTapped:" destination="W8g-HR-1yK" eventType="touchUpInside" id="Huo-2U-qDB"/>
...
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Enroll for the reception"/>
                                <connections>
                                    <action selector="terapTapped:" destination="YoJ-dP-3J0" eventType="touchUpInside" id="rz5-9v-qXt"/>
...
