...
    @IBOutlet var passwordText: UITextField!
    
    @IBAction func registerTapped(_ sender: Any) {
        if(loginText.text == "" || passwordText.text == "" || nameText.text == ""){
            
             DispatchQueue.main.async {
                           let alert = UIAlertController(title: "Error", message: "Incorrect data!", preferredStyle: .alert)
                           alert.addAction(UIAlertAction(title: "OK", style: .default, handler: { action in
                               switch action.style{
                               case .default:
                                   print("default")
                               case .cancel:
                                   print("cancel")
...
